# pdf2json-paper

./: .gitignore  COPILOT_CHANGES.md  LICENSE  README.md  config.example.json  construction.md  extractor.py  interact.py  main.py  pyproject.toml
prompts/: concise_to_lean.md  json_to_lean.md  recovery.md
src/book/: mdTotex.py  pdfTomd.py  settings.json  texTojson.py
src/json2lean/: __init__.py  __main__.py  api_client.py  comment_builder.py  lean_env.py  loader.py  main.py  models.py  parser.py  preprocessor.py  recover.py  translater.py  validator.py  writer.py
src/paper/: mdTotex.py  pdfTomd.py  texTojson.py
work/debug/: test_proof_early_end.py
