[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "json2lean"
version = "0.1.0"
description = "Convert JSON optimization exercises into Lean 4 files"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
]

[project.scripts]
json2lean = "json2lean.main:main"

[tool.setuptools.packages.find]
where = ["src"]
